--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:eslint": "eslint . --fix",
     "lint": "run-s lint:*",
     "format": "prettier --write src/",
-    "gh-deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages",
+    "gh-deploy": "git subtree push --prefix dist origin gh-pages",
     "gh-deploy-init": "git push origin && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
